<resources>
    <string name="app_name" translatable="false">MIG</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_about">About MIG</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms">Terms and conditions</string>
    <string name="favourites">Favourites</string>
    <string name="exit">Exit</string>
    <string name="auto_lang">System</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_places">Places</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_restaurants">Restaurants</string>
    <string name="title_activity_more">More</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="directions">Directions</string>
    <string name="more">More…</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="settings_other">Other</string>
    <string name="location">Location</string>
    <string name="english">English</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="romanian">Romanian</string>
    <string name="slide_1_title">Find</string>
    <string name="slide_2_title">Choose</string>
    <string name="slide_3_title">Explore</string>
    <string name="slide_1_text">Find places near you</string>
    <string name="slide_2_text">Choose a new adventure</string>
    <string name="slide_3_text">Rediscover new places</string>
    <string name="slide_button2">Explore!</string>
    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">The application must have permission to find location</string>
    <string name="ok">OK</string>
    <string name="my_loc">My location</string>
    <string name="images_title">Images</string>
    <string name="permission_rationale">Location permission is needed</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="away">km away</string>
    <string name="there_are_no_places_to_show">There are no places to show</string>
    <string name="comeback_later">Comeback later</string>
    <string name="search_hint">Search…</string>
    <string name="search">Search</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="share_via">Share via</string>
    <string name="app_data">Loading application data…</string>
    <string name="there_are_no_images_to_show">There are no images to show</string>
    <string name="spinner">Spinner</string>
    <string name="place_name">Place name</string>
    <string name="city">City</string>
    <string name="nearby_places">Nearby places</string>
    <string name="explore_nearby">Explore nearby</string>
    <string name="dashes" translatable="false">- - -</string>
    <string name="news">News</string>
    <string name="about">About</string>
    <string name="facilities">Facilities</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="airport_transfer">Airport Transfer</string>
    <string name="bar_lounge">Bar</string>
    <string name="gym_fitness">Gym / Fitness</string>
    <string name="beach">Beach</string>
    <string name="casino">Casino</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="restaurant">Restaurant</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="laundry">Laundry</string>
    <string name="breakfast">Breakfast</string>
    <string name="elevator">Elevator</string>
    <string name="reviews">reviews</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="book">Book</string>
    <string name="choose_dates">Choose dates</string>
    <string name="choose_rooms">Rooms</string>
    <string name="choose_filters">Filters</string>
    <string name="my_location">My Location</string>
    <string name="filters">Sort</string>
    <array name="spinner">
        <item>@string/all</item>
        <item>@string/title_activity_places</item>
        <item>@string/title_activity_hotels</item>
        <item>@string/title_activity_restaurants</item>
    </array>
    <string name="loading_data">Loading application data...</string>
</resources>