<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/settingsActivityFragment">

    <fragment
        android:id="@+id/settingsActivityFragment"
        android:name="com.example.mig.ui.fragments.SettingsActivityFragment"
        android:label="@string/title_activity_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/settingsLanguageFragment"
            app:enterAnim="@anim/enter_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
        <action
            android:id="@+id/action_firstFragment_to_thirdFragment"
            app:destination="@id/settingsFavouritesFragment"
            app:enterAnim="@anim/enter_anim"
            app:exitAnim="@anim/exit_anim"
            app:popEnterAnim="@anim/pop_enter_anim"
            app:popExitAnim="@anim/pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/settingsLanguageFragment"
        android:name="com.example.mig.ui.fragments.SettingsLanguageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/settingsFavouritesFragment"
        android:name="com.example.mig.ui.fragments.SettingsFavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />
</navigation>