<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/placeImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/light_grey"
                    android:src="@drawable/ic_baseline_image_not_supported_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addToFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    app:backgroundTint="@color/white"
                    app:elevation="0dp"
                    app:fabSize="mini"
                    app:tint="@color/colorAccent" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/placeNameTv"
                    style="@style/TitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_name"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/placeNameTv"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:stepSize="2" />

                    <TextView
                        android:id="@+id/reviewsTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:text="@string/reviews"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/placeTypeAwayTv"
                    style="@style/DefaultTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ratingLayout"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textStyle="normal"
                    app:drawableStartCompat="@drawable/ic_pin_location"
                    app:drawableTint="@color/colorPrimary" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:letterSpacing="0"
                android:text="@string/book"
                app:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>